syntax = "proto3";

package hello;

service World {
  rpc Preprocess (PreprocessRequest) returns (PreprocessResponse);
  rpc Partdec (PartDecRequest) returns (PartDecResponse);
}

message PreprocessRequest { }

message PreprocessResponse {
  string hex_serialized_aggregate_key = 1;
}

message PartDecRequest {
  string ciphertext_hex = 1;
}

message PartDecResponse {
  string hex_serialized_decryption = 1;
}